miniextendr-macros/tests/ui/module_missing_mod.stderr
error: missing `mod <name>;` declaration (required as first item in miniextendr_module!)
 --> tests/ui/module_missing_mod.rs:6:8
  |
6 |     fn some_function;
  |        ^^^^^^^^^^^^^
